--- a/package.json
+++ b/package.json
@@ -1,14 +1,22 @@
 {
-  "name": "discordcoinsuite",
+  "name": "discordcoin-suite",
   "version": "1.0.0",
-  "description": "Discord Coin Suite Bot + Web",
-  "main": "src/web.js",
+  "type": "module",
+  "main": "index.js",
   "scripts": {
-    "start": "node src/web.js"
+    "start": "node index.js",
+    "dev": "NODE_ENV=development node index.js",
+    "register": "node src/register-commands.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "discord.js": "^14.14.1",
-    "ejs": "^3.1.9"
+    "axios": "^1.7.2",
+    "better-sqlite3": "^9.4.0",
+    "dayjs": "^1.11.13",
+    "discord.js": "^14.15.3",
+    "dotenv": "^16.4.5",
+    "ejs": "^3.1.10",
+    "express": "^4.19.2",
+    "express-session": "^1.17.3",
+    "morgan": "^1.10.0"
   }
 }
