--- a/package.json
+++ b/package.json
@@ -1,22 +1,17 @@
 {
-  "name": "discordcoin-suite",
+  "name": "discord-coin-suite",
   "version": "1.0.0",
-  "type": "module",
+  "description": "Discord bot + coin system",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "start": "node index.js",
-    "dev": "NODE_ENV=development node index.js",
-    "register": "node src/register-commands.js"
+    "start": "node index.js"
   },
   "dependencies": {
-    "axios": "^1.7.2",
-    "better-sqlite3": "^9.4.0",
-    "dayjs": "^1.11.13",
     "discord.js": "^14.15.3",
     "dotenv": "^16.4.5",
-    "ejs": "^3.1.10",
     "express": "^4.19.2",
-    "express-session": "^1.17.3",
-    "morgan": "^1.10.0"
+    "node-cron": "^3.0.3",
+    "better-sqlite3": "^9.4.0"
   }
 }
